# sigil.app

./: .gitignore  CHANGELOG.md  README.md  TESTING.md  package.json
.changeset/: add-rpm-release.md  add-typed-callback-responses.md  appimage-fuse-build-fix.md  appimage-linux-compat.md  biometric-send-request-fixes.md  cleanup-and-bundle-improvements.md  codeql-security-cleanups.md  connect-contacts-improvements.md  drop-proof-add-redirect-uri.md  feat-support-sponsors-discord.md  fix-deeplink-request-screen.md  fix-history-filters.md  fix-pending-tx-expiry.md  fix-sc-procedure-names.md  fix-settings-values.md  fix-unused-schema-var.md  fix-updater-context-serialization.md  fix-vaults-contacts-ux.md  hardening-and-maintainability.md  high-priority-audit-fixes.md  linux-deployment-fixes.md  medium-audit-fixes.md  notification-background-upgrades.md  pre.json  qutil-getbalances16.md  release-hardening-and-wallet-polish.md  reliability-listeners.md  request-vaults-send-fixes.md  rust-hardening.md  sc-call-contract-names-fix.md  sc-call-router-transfer-polish.md  screen-header-and-import-vault.md  scroll-modal-portal.md  security-and-quality-fixes.md  security-and-ux-fixes.md  security-capabilities.md  skeleton-and-error-handling.md  type-docs-and-rust-fixes.md  ux-and-accessibility.md  ux-features-and-notifications.md  (+2 more)
src/: App.tsx  main.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/linux/: sigil.desktop.hbs
src-tauri/src/: auto_lock.rs  biometric.rs  clipboard.rs  commands.rs  deep_link.rs  lib.rs  main.rs  store_crypto.rs  vault_crypto.rs
(+90 files in other folders)
