[package]
name = "sigil-wallet"
version = "0.8.2"
description = "Self-custodial Qubic wallet with dApp deep linking"
authors = ["alez04"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sigil_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
hex = "0.4"
url = "2"
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
keyring = "3"
tokio = { version = "1", features = ["rt"] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
block = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Security_Credentials_UI", "Win32_Security_Credentials", "Win32_Foundation"] }
